objects/ACLS_KeyValue__mdt.object
<CustomObject>
    <fields>
        <fullName>ACLS_EPCode__c</fullName>
        <label>EPCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Config 1</fullName>
                    <default>true</default>
                    <label>Config 1</label>
                </value>
                <value>
                    <fullName>Batch Size</fullName>
                </value>
                <value>
                    <fullName>Integration Defaults</fullName>
                </value>
                <value>
                    <fullName>Value Transformation</fullName>
                </value>
                <value>
                    <fullName>Batch Frequency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>KeyValue Config</label>
    <pluralLabel>KeyValue Configs</pluralLabel>
</CustomObject>